feat: make task name optional
